# ParrLO

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.condo  README.install  README.md
benchmarks/main/: input.cfg  runmain.lsf
benchmarks/mpi/: CMakeLists.txt  test_mpi_device.cc  test_mpi_host.cc  test_mpi_nccl.cc
ci/: Dockerfile  jenkins_config
cmake/: FindMAGMA.cmake  FindNCCL.cmake  checkCFortranFunctionExists.cmake
scripts/: CMakeCache.txt  build_summit_magma2.5.3  build_summit_magma2.5.3_xl  condo-uptaded.pbs  condo.pbs  condo_gpu_cmake  modules.condo  modules.summit  modules.summit_magma2.5.3  modules.summit_magma2.5.3_xl  runsolver.sh  summit_gpu_cmake
src/: CMakeLists.txt  blas.h  main.cc  main_gaussian.cc  matrix_example.cc  test_rescaling.cc  tutorial4_copy.cc  warmup.cc  warmup.h
src/MatrixClasses/: Matrix_decl.hpp  Matrix_def.cpp  Matrix_def.hpp  RandomMatrix_decl.hpp  RandomMatrix_def.hpp  Replicated_decl.hpp  Replicated_def.cpp  Replicated_def.hpp  Timer.cpp  Timer.hpp
tests/: CMakeLists.txt  testAllreduce.cc  testAllreduce_nccl.cc  testCholesky.cc  testMAGMA.cc  testMPI.cc  testMatMul.cc  testMaxNormReplicated.cc  testOrtho.cc  testOrtho.py  testOrthoGaussian.cc  testOrthoGaussian.cfg  testOrthoGaussian.py  testOrthoGaussianCholesky.cfg  testOrthoGaussianDelta.cfg  testOrthoGaussianRescale.cc  testOrthoGaussianRescale.cfg  testOrthoHatFunction.cc  testOrthoHatFunction.cfg  testOrthoHatFunctionCholesky.cfg  testOrthoHatFunctionRescale.cc  testOrthoHatFunctionRescale.cfg  testOrthoRescale.cc  testSchulz.cc  testSchulzSingle.cc
